Upgrade to PHP 7, fixed start/stop processes